Fixed potential visibility issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -31,8 +31,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hidden {
-  display: none;
-  visibility: hidden;
-  width: 0;
-  height: 0;
+  display: none !important;
+  visibility: hidden !important;
+  width: 0 !important;
+  height: 0 !important;
 }
